hack/metrics/overlays/ocp-oauth/patch_deployment_env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
