hack/metrics/overlays/ocp-oauth/patch_deployment_oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  template:
    spec:
      containers:
        - name: grafana
          args:
            - -config=/etc/grafana/config.ini
          readinessProbe:
            httpGet:
              scheme: HTTPS
          volumeMounts:
            - mountPath: /etc/grafana
              name: grafana-config
            - mountPath: /etc/tls/private
              name: secret-grafana-tls
      serviceAccountName: grafana
      volumes:
        - name: grafana-config
          configMap:
            name: grafana-config
        - name: secret-grafana-tls
          secret:
            defaultMode: 420
            secretName: grafana-tls
