hack/metrics/overlays/ocp-oauth/patch_service_tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: grafana-tls
